Opened 16 years ago

Closed 16 years ago

#3040 closed bug (fixed)

[DeskCalc] font size is not consistent

Reported by: diver Owned by: zooey
Priority: normal Milestone: R1
Component: Applications/DeskCalc Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

To reproduce:
Type something then resize the window and type again.

Attachments (1)

deskcalc.png (110.5 KB ) - added by diver 16 years ago.

Download all attachments as: .zip

Change History (8)

by diver, 16 years ago

Attachment: deskcalc.png added

comment:1 by franxico, 16 years ago

If you resize it one more time, font size will become consistent again.

comment:2 by stpere, 16 years ago

Ok, it seems the problem is that when we call SetFontAndColor, it does set it for the current text, but that setting isn't kept for new text typed in. I unfortunately can't figure it out for the moment. Might look into it, but if somebody already knowing the details of TextView want to look into it, that would be great.

comment:3 by aldeck, 16 years ago

We looked a bit into it with oco at BeGeistert, iirc it's a problem in BTextView. The new style isn't applyed to the new 'text runs' or something along those lines. This textview shouldn't support multiple styles, there might be a problem here in the first place :)

comment:4 by zooey, 16 years ago

Owner: changed from stippi to zooey
Status: newassigned

comment:5 by zooey, 16 years ago

Resolution: fixed
Status: assignedclosed

Should be fixed by hrev30516.

comment:6 by diver, 16 years ago

Resolution: fixed
Status: closedreopened

Still here in hrev30519, reopeining.

comment:7 by zooey, 16 years ago

Resolution: fixed
Status: reopenedclosed

Thanks diver, for the heads up - should be fixed for real in hrev30532.

Note: See TracTickets for help on using tickets.